# renderer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  shader_gen.py
include/: resource_owner.h
include/common/: image.h  mesh.h  node.h  vertex.h
shaders/: depth.vert  light_pass.vert  material.frag  material.vert  tonemap.frag  tonemap.vert
shaders/include/: material_incl.glsl  std_incl.glsl
src/: main.cpp
src/common/: aabb.h  material.h  mesh.h
src/io/: encoding.h  gltf_loader.cpp  gltf_loader.h  image.h  loader.cpp  loader.h  scene.cpp  scene.h
src/io/preprocess/: encoding.h  mesh_preprocessor.cpp  mesh_preprocessor.h
src/io/types/: mesh.h  node.h  scene.h  vertex.h
src/math/: projection.cpp  projection.h
src/math/types/: mat3.cpp  mat3.h  mat4.cpp  mat4.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
src/rendering/: renderer.cpp  renderer.h  renderer_scene_draw.cpp  renderer_scene_draw.h  rendering_device.cpp  rendering_device.h  rendering_server.cpp  rendering_server.h  resource_owner.h  shader.cpp  shader.h  typedefs.h  vulkan_context.cpp  vulkan_context.h
src/rendering/common/: vk_allocated.h  vk_attributes.h
src/rendering/debug/: test_cube.h
src/rendering/device/: rendering_device.cpp  rendering_device.h  vk_vertex.h  vulkan_context.cpp  vulkan_context.h
src/rendering/device/types/: allocated.h  resource_owner.h  vk_vertex.h
src/rendering/shaders/: geometry_pass.frag  geometry_pass.vert  light_pass.frag  light_pass.vert
src/rendering/shaders/include/: common_incl.glsl  light_incl.glsl  tonemap_incl.glsl
src/rendering/storage/: light_storage.h  material_storage.h  mesh_storage.cpp  mesh_storage.h  texture_storage.h
src/rendering/types/: allocated.h  vk_vertex.h
